[gd_scene load_steps=43 format=2]

[ext_resource path="res://arts/characters/player.png" type="Texture" id=1]
[ext_resource path="res://arts/light.png" type="Texture" id=2]
[ext_resource path="res://objects/ui/BuildCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/characters/player/Player.gd" type="Script" id=4]
[ext_resource path="res://arts/ui/theme.tres" type="Theme" id=5]
[ext_resource path="res://arts/characters/player_walk1.png" type="Texture" id=6]
[ext_resource path="res://arts/characters/player_eyes.png" type="Texture" id=7]
[ext_resource path="res://arts/characters/player_walk2.png" type="Texture" id=8]
[ext_resource path="res://arts/ui/btn_move.png" type="Texture" id=9]
[ext_resource path="res://arts/ui/btn_destroy.png" type="Texture" id=10]
[ext_resource path="res://objects/ui/CulpitMenu.gd" type="Script" id=11]
[ext_resource path="res://objects/ui/PrebuildHint.gd" type="Script" id=12]
[ext_resource path="res://arts/ui/quick_access_hover.png" type="Texture" id=13]
[ext_resource path="res://arts/ui/quick_access.png" type="Texture" id=14]
[ext_resource path="res://arts/ui/quick_access_pressed.png" type="Texture" id=15]
[ext_resource path="res://objects/ui/StorageGroup.tres" type="ButtonGroup" id=16]
[ext_resource path="res://arts/font/BarlowCondensed-SemiBold.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://arts/light_small.png" type="Texture" id=18]
[ext_resource path="res://objects/ui/StorageUI.gd" type="Script" id=21]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0624

[sub_resource type="InputEventAction" id=8]
action = "storage_1"
pressed = true

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="DynamicFont" id=18]
size = 18
font_data = ExtResource( 17 )

[sub_resource type="InputEventAction" id=10]
action = "storage_2"
pressed = true

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="InputEventAction" id=12]
action = "storage_3"
pressed = true

[sub_resource type="ShortCut" id=13]
shortcut = SubResource( 12 )

[sub_resource type="InputEventAction" id=14]
action = "storage_4"
pressed = true

[sub_resource type="ShortCut" id=15]
shortcut = SubResource( 14 )

[sub_resource type="InputEventAction" id=16]
action = "storage_5"
pressed = true

[sub_resource type="ShortCut" id=17]
shortcut = SubResource( 16 )

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="ButtonGroup" id=4]

[sub_resource type="ButtonGroup" id=5]

[sub_resource type="ButtonGroup" id=6]

[sub_resource type="CircleShape2D" id=2]
radius = 83.2947

[sub_resource type="Gradient" id=22]
offsets = PoolRealArray( 0, 0.304348 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=23]
gradient = SubResource( 22 )

[sub_resource type="Curve" id=19]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.443182 ), -0.176565, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=20]
curve = SubResource( 19 )

[sub_resource type="ParticlesMaterial" id=21]
emission_shape = 1
emission_sphere_radius = 15.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.2
scale_curve = SubResource( 20 )
color_ramp = SubResource( 23 )

[node name="Player" type="KinematicBody2D"]
z_index = 40
collision_layer = 4
collision_mask = 9
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.7419, 0.7419 )
frames = SubResource( 7 )
animation = "idle"
playing = true

[node name="Eyes" type="Sprite" parent="AnimatedSprite"]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
energy = 0.7
mode = 2
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 25.1

[node name="WearSlot" type="Position2D" parent="."]
position = Vector2( 0, -31 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -363.0
margin_right = 466.0
margin_bottom = -44.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.415686 )
margin_right = 426.0
margin_bottom = 198.0
grow_horizontal = 0
grow_vertical = 0
bbcode_enabled = true
bbcode_text = "NUM KEY - Select Slot
G - Throw Holding Item
LMB - Use Holding Item


"
text = "NUM KEY - Select Slot
G - Throw Holding Item
LMB - Use Holding Item


"
fit_content_height = true

[node name="StorageBox" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 202.0
margin_right = 426.0
margin_bottom = 283.0
alignment = 1

[node name="Storage" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer/StorageBox"]
margin_right = 82.0
margin_bottom = 81.0
focus_mode = 0
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
shortcut = SubResource( 9 )
group = ExtResource( 16 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
script = ExtResource( 21 )

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/StorageBox/Storage"]
modulate = Color( 1, 1, 1, 0.537255 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 40.0
custom_fonts/font = SubResource( 18 )
text = "1"
valign = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/StorageBox/Storage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.5
margin_right = 25.0
margin_bottom = 24.5
rect_min_size = Vector2( 50, 50 )
expand = true
stretch_mode = 6

[node name="Item" type="Label" parent="CanvasLayer/Control/VBoxContainer/StorageBox/Storage"]
visible = false
margin_top = -89.0
margin_right = 82.0
margin_bottom = -4.0
theme = ExtResource( 5 )
text = "Auto
Turret"
align = 1
valign = 2
autowrap = true

[node name="Storage2" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer/StorageBox"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 81.0
focus_mode = 0
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
shortcut = SubResource( 11 )
group = ExtResource( 16 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
script = ExtResource( 21 )

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/StorageBox/Storage2"]
modulate = Color( 1, 1, 1, 0.537255 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 40.0
custom_fonts/font = SubResource( 18 )
text = "2"
valign = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/StorageBox/Storage2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.5
margin_right = 25.0
margin_bottom = 24.5
rect_min_size = Vector2( 50, 50 )
expand = true
stretch_mode = 6

[node name="Storage3" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer/StorageBox"]
margin_left = 172.0
margin_right = 254.0
margin_bottom = 81.0
focus_mode = 0
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
shortcut = SubResource( 13 )
group = ExtResource( 16 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
script = ExtResource( 21 )

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/StorageBox/Storage3"]
modulate = Color( 1, 1, 1, 0.537255 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 40.0
custom_fonts/font = SubResource( 18 )
text = "3"
valign = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/StorageBox/Storage3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.5
margin_right = 25.0
margin_bottom = 24.5
rect_min_size = Vector2( 50, 50 )
expand = true
stretch_mode = 6

[node name="Storage4" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer/StorageBox"]
margin_left = 258.0
margin_right = 340.0
margin_bottom = 81.0
focus_mode = 0
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
shortcut = SubResource( 15 )
group = ExtResource( 16 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
script = ExtResource( 21 )

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/StorageBox/Storage4"]
modulate = Color( 1, 1, 1, 0.537255 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 40.0
custom_fonts/font = SubResource( 18 )
text = "4"
valign = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/StorageBox/Storage4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.5
margin_right = 25.0
margin_bottom = 24.5
rect_min_size = Vector2( 50, 50 )
expand = true
stretch_mode = 6

[node name="Storage5" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer/StorageBox"]
margin_left = 344.0
margin_right = 426.0
margin_bottom = 81.0
focus_mode = 0
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
shortcut = SubResource( 17 )
group = ExtResource( 16 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
script = ExtResource( 21 )

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/StorageBox/Storage5"]
modulate = Color( 1, 1, 1, 0.537255 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 40.0
custom_fonts/font = SubResource( 18 )
text = "5"
valign = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/StorageBox/Storage5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.5
margin_right = 25.0
margin_bottom = 24.5
rect_min_size = Vector2( 50, 50 )
expand = true
stretch_mode = 6

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 287.0
margin_right = 426.0
margin_bottom = 319.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_right = 23.0
margin_bottom = 32.0
theme = ExtResource( 5 )
text = "HP"

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_left = 27.0
margin_right = 426.0
margin_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource( 5 )

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 474.0
margin_top = -231.0
alignment = 2

[node name="BuildMenu" type="ScrollContainer" parent="CanvasLayer/Control/VBoxContainer2"]
visible = false
margin_top = 38.0
margin_right = 1446.0
margin_bottom = 195.0
theme = ExtResource( 5 )
follow_focus = true
scroll_vertical_enabled = false

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu"]
margin_left = 723.0
margin_right = 723.0
size_flags_horizontal = 6
theme = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer"]
margin_right = 1492.0
margin_bottom = 145.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer"]
margin_left = 100.0
margin_right = 1500.0
margin_bottom = 145.0
theme = ExtResource( 5 )
alignment = 1

[node name="BuildCard" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
group = SubResource( 3 )

[node name="BuildCard2" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 108.0
margin_right = 212.0
group = SubResource( 4 )

[node name="BuildCard3" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 216.0
margin_right = 320.0
group = SubResource( 5 )
build_type = "locker"

[node name="BuildCard4" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 324.0
margin_right = 428.0
group = SubResource( 6 )
build_type = "locker"

[node name="BuildCard5" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 432.0
margin_right = 536.0
group = SubResource( 6 )
build_type = "light"

[node name="BuildCard7" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 540.0
margin_right = 644.0
group = SubResource( 6 )
build_type = "light"

[node name="BuildCard8" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 648.0
margin_right = 752.0
group = SubResource( 6 )
build_type = "light"

[node name="BuildCard6" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 756.0
margin_right = 860.0
group = SubResource( 6 )
build_type = "printer"

[node name="BuildCard9" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 864.0
margin_right = 968.0
group = SubResource( 6 )
build_type = "turret"

[node name="BuildCard10" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 972.0
margin_right = 1076.0
group = SubResource( 6 )
build_type = "turret"

[node name="BuildCard11" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 1080.0
margin_right = 1184.0
group = SubResource( 6 )
build_type = "room"

[node name="BuildCard13" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 1080.0
margin_right = 1184.0
group = SubResource( 6 )
build_type = "room"

[node name="BuildCard12" parent="CanvasLayer/Control/VBoxContainer2/BuildMenu/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 1188.0
margin_right = 1292.0
group = SubResource( 6 )
build_type = "wall"

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer2"]
margin_top = 199.0
margin_right = 1446.0
margin_bottom = 231.0
theme = ExtResource( 5 )
text = "Q - Building Blueprints"
align = 2

[node name="ControlHint" type="VBoxContainer" parent="CanvasLayer/Control"]
visible = false
margin_bottom = 32.0
mouse_filter = 2
theme = ExtResource( 5 )
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/ControlHint"]
margin_right = 189.0
margin_bottom = 45.0
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/ControlHint/HBoxContainer"]
margin_right = 52.89
margin_bottom = 45.0
rect_min_size = Vector2( 52.89, 45 )
mouse_filter = 2

[node name="Key" type="Label" parent="CanvasLayer/Control/ControlHint/HBoxContainer/PanelContainer"]
margin_top = 6.0
margin_right = 52.89
margin_bottom = 38.0
theme = ExtResource( 5 )
text = "E"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/ControlHint/HBoxContainer"]
margin_left = 56.0
margin_right = 66.0
margin_bottom = 45.0
mouse_filter = 2
custom_constants/margin_right = 10

[node name="Label" type="Label" parent="CanvasLayer/Control/ControlHint/HBoxContainer"]
margin_left = 70.0
margin_top = 6.0
margin_right = 189.0
margin_bottom = 38.0
theme = ExtResource( 5 )
text = "awdawdawda"
align = 1
valign = 1

[node name="CulpitMenu" type="PanelContainer" parent="CanvasLayer/Control"]
visible = false
margin_right = 310.0
margin_bottom = 45.0
theme = ExtResource( 5 )
script = ExtResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/CulpitMenu"]
margin_right = 310.0
margin_bottom = 45.0
custom_constants/margin_right = 30
custom_constants/margin_left = 30

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CulpitMenu/MarginContainer"]
margin_left = 30.0
margin_right = 280.0
margin_bottom = 45.0
theme = ExtResource( 5 )

[node name="Move" type="Button" parent="CanvasLayer/Control/CulpitMenu/MarginContainer/HBoxContainer"]
margin_right = 123.0
margin_bottom = 45.0
focus_mode = 0
size_flags_horizontal = 3
theme = ExtResource( 5 )
enabled_focus_mode = 0
text = "Move"
icon = ExtResource( 9 )
expand_icon = true

[node name="Destroy" type="Button" parent="CanvasLayer/Control/CulpitMenu/MarginContainer/HBoxContainer"]
margin_left = 127.0
margin_right = 250.0
margin_bottom = 45.0
focus_mode = 0
size_flags_horizontal = 3
theme = ExtResource( 5 )
enabled_focus_mode = 0
text = "Destroy"
icon = ExtResource( 10 )
expand_icon = true

[node name="PrebuildHint" type="Label" parent="CanvasLayer/Control"]
visible = false
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.254902, 0.254902, 1 )
text = "Too Far"
align = 1
valign = 1
script = ExtResource( 12 )

[node name="ControllableDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 72

[node name="CollisionShape2D" type="CollisionShape2D" parent="ControllableDetection"]
shape = SubResource( 2 )

[node name="testParticle" type="Particles2D" parent="."]
z_index = -1
emitting = false
local_coords = false
process_material = SubResource( 21 )
texture = ExtResource( 18 )

[node name="Basetimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="ControllableDetection" to="." method="_on_ControllableDetection_body_entered"]
[connection signal="body_exited" from="ControllableDetection" to="." method="_on_ControllableDetection_body_exited"]
[connection signal="timeout" from="Basetimer" to="." method="_on_Basetimer_timeout"]
